--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -4,7 +4,7 @@
 
 .class-course { }
 .class-course img { width: 300px }
-.course-banner { margin-left: 320px; padding: 10px 0; }
+.course-banner { margin-left: 320px; }
 .course-banner ul {
   list-style-type: none; 
   padding: 10px 0; 
@@ -60,8 +60,6 @@ blockquote {
 
 .course-discussion {
   .discuss-list {
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
 
     ul {
       list-style-type: none;
@@ -85,7 +83,10 @@ blockquote {
   }
 
   .discuss-input-box {
-    padding-top: 20px;
+    border-bottom: 1px solid #ddd;
+    padding-top: 10px;
+    margin-top: 10px;
+    
     img {
       float: left; 
       width: 40px;
@@ -172,4 +173,9 @@ ul.course-class-attachment {
 .course-class-uploader-form {
   border-top: 1px dashed #ddd;
   padding-top: 20px;
+  margin-top: 20px;
+
+  form {
+    .control-group .controls .input { display: inline; }
+  }
 }
