--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -143,9 +143,44 @@ ul.active-training-list {
   }
 
   li.training-user-course {
-    padding: 5px;
+    padding: 8px;
     border-bottom: 1px solid #ddd;
     &:last-child { border-bottom: 0; }
+
+    ul.active-class-list {
+      clear: both;
+      //list-style-type: none;
+      padding: 5px 0;
+      margin-left: 20px;
+
+      li {
+        padding: 5px 0;
+
+
+        form { display: inline; }
+      }
+    }
+  }
+}
+
+.overview {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+
+  li {
+    display: block;
+    margin: 6px 0;
+    a { 
+      color: #fff;
+      background: #0866c6;
+      padding: 10px 20px;
+      display: block;
+      font-size: medium;
+      &:hover { background: #282828; text-decoration: none; }
+      span.overview-icon { margin-right: 5px; }
+      span.overview-counter { float: right; } 
+    }
   }
 }
 
