--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -4,7 +4,7 @@
 
 .class-course { }
 .class-course img { width: 300px }
-.course-banner { margin-left: 320px; }
+.course-banner { margin-left: 320px; min-height: 225px; }
 .course-banner ul {
   list-style-type: none; 
   padding: 10px 0; 
@@ -83,7 +83,7 @@ blockquote {
   }
 
   .discuss-input-box {
-    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
     padding-top: 10px;
     margin-top: 10px;
     
@@ -179,3 +179,16 @@ ul.course-class-attachment {
     .control-group .controls .input { display: inline; }
   }
 }
+
+.examination-list {
+  padding: 10px 0;
+  a { float: right; }
+}
+
+.survey-list {
+  padding: 10px 0;
+  border-top: 1px solid #ddd;
+  a { float: right; }
+}
+
+
