--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -149,40 +149,24 @@ ul.active-training-list {
 
     ul.active-class-list {
       clear: both;
-      //list-style-type: none;
-      padding: 5px 0;
-      margin-left: 20px;
+      list-style-type: none;
+      padding: 0;
 
       li {
         padding: 5px 0;
-
-
         form { display: inline; }
       }
     }
   }
 }
 
-.overview {
+ul.teach-classes-list {
   list-style-type: none;
-  margin: 0;
-  padding: 0;
 
   li {
-    display: block;
-    margin: 6px 0;
-    a { 
-      color: #fff;
-      background: #0866c6;
-      padding: 10px 20px;
-      display: block;
-      font-size: medium;
-      &:hover { background: #282828; text-decoration: none; }
-      span.overview-icon { margin-right: 5px; }
-      span.overview-counter { float: right; } 
-    }
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+    &:last-child { border-bottom: 0; }
   }
 }
-
-
 
