--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -15,20 +15,16 @@
 
 <div class="row-fluid">
   <div id="dashboard-left" class="span8">
-    <h4 class="widgettitle">添加新考题</h4>
+    <h4 class="widgettitle"><%= get_question_type(@question_type) %></h4>
     <div class="widgetcontent">
       <div class="divider15"></div>
-      <%= simple_form_for [@exam, @question], :html => {:class => 'form-horizontal'} do |f| %>
-        <%= f.collection_select :question_type_str, [[:choice, "选择题"], [:judgement, "判断题"], [:dialogical, "简答题"]], :first, :last%>
-        <%= f.input :qdata, :as => :text, :label => "考试标题：", :hint => "支持markdown格式标记", :input_html => { :class => "span5", :cols => 50, :rows => 8 } %>
-        <%= f.input :answer, :label => "正确答案：", :input_html => { :class => "span5" } %>
-        <div class="form-actions">
-        <%= f.button :submit, '创建新考题', :class => "btn-primary"  %>
-        </div>
+
+      <% if judge_type(@question_type) %>
+        <%= render :partial => "#{@question_type}"  %>
+      <% else %>
+        <%= render :partial => "question_new" %>
       <% end %>
+
     </div>
-  </div>
-  <div id="dashboard-right" class="span4">
-    
   </div>
 </div>
